Make a test request out to a weather endpoint and display the results

--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -24,8 +24,9 @@ $tabs-tab-color: color($colors, light);
 $tabs-tab-text-color: color($colors, light);
 
 // Default Background
-$background-color: color($colors, primary);
-$text-color: color($colors, light);
+ion-content {
+  background-color: color($colors, primary) !important;
+}
 
 // Custom Lists
 
